--- a/Makefile.in
+++ b/Makefile.in
@@ -136,7 +136,7 @@ check: $(CMA) check.ml
 editor-no:
 editor-yes: editor/editor.$(OCAMLBEST)
 
-EDCMO = editor/htree.cmo editor/gtree.cmo editor/editor.cmo
+EDCMO = editor/dirtree.cmo editor/htree.cmo editor/gtree.cmo editor/editor.cmo
 EDCMX = $(EDCMO:.cmo=.cmx)
 
 editor/editor.byte: $(CMA) $(EDCMO)
