--- a/editor/Makefile
+++ b/editor/Makefile
@@ -7,6 +7,8 @@ graphEd.opt : outils_math.ml outils_tort.ml graphEd.ml
 	ocamlopt -o $@ graphics.cmxa -I .. ../graph.cmxa $^
 
 
+graphEdGTK : outils_math.ml outils_tort.ml graphEdGTK.ml
+	ocamlopt -o $@ -I +lablgtk2 lablgtk.cmxa lablgnomecanvas.cmxa unix.cmxa -I .. ../graph.cmxa $^
 
 editor.opt:
 	make -C .. 
