plus de bug (pour le moment :) ) a l'ouverture d'un fichier

--- a/editor/Makefile
+++ b/editor/Makefile
@@ -1,6 +1,6 @@
 
 test: graphEdGTK
-	./graphEdGTK tests/full10.gml
+	./graphEdGTK tests/full20.gml
 
 tortue.opt: tortue.ml 
 	ocamlopt outils_math.ml
@@ -13,6 +13,9 @@ graphEd.opt : outils_math.ml outils_tort.ml graphEd.ml
 
 graphEdGTK : outils_math.ml outils_tort.ml graphEdGTK.ml
 	ocamlopt.opt -o $@ -I +lablgtk2 lablgtk.cmxa lablgnomecanvas.cmxa unix.cmxa -I .. ../graph.cmxa $^
+
+graphEdGTK.byte : outils_math.ml outils_tort.ml graphEdGTK.ml
+	ocamlc.opt -g -o $@ -I +lablgtk2 lablgtk.cma lablgnomecanvas.cma unix.cma -I .. ../graph.cma $^
 
 editor.opt:
 	make -C .. 
