detection de la lib ocaml avec ocamlc -where

--- a/configure.in
+++ b/configure.in
@@ -55,7 +55,9 @@ case $OCAMLVERSION in
 	FORPACK="-for-pack Graph";;
 esac
 
-OCAMLLIB=`$OCAMLC -v | tail -n 1 | cut -f 4 -d " "`
+# OCAMLLIB=`$OCAMLC -v | tail -n 1 | cut -f 4 -d " "`
+# OCAMLLIB=`$OCAMLC -v | tail -n 1 | sed -e 's|[[^:]]*: \(.*\)|\1|' `
+OCAMLLIB=`$OCAMLC -where`
 echo "ocaml library path is $OCAMLLIB"
 
 # then we look for ocamlopt; if not present, we issue a warning
