--- a/editor/rapport-ter/Makefile
+++ b/editor/rapport-ter/Makefile
@@ -6,5 +6,11 @@ rapport.ps: rapport.tex biblio.bib
 	latex rapport
 	dvips rapport.dvi -o $@
 
+%-pp.tex: pp.ml %.tex	 
+	ocaml $^ > $@
+
+pp.ml: pp.mll
+	ocamllex pp.mll
+
 print: rapport.ps
 	lpr $^
