--- a/editor/rapport-ter/Makefile
+++ b/editor/rapport-ter/Makefile
@@ -1,16 +1,25 @@
 
-rapport.ps: rapport.tex biblio.bib
-	latex rapport
-	bibtex rapport
-	latex rapport
-	latex rapport
-	dvips rapport.dvi -o $@
+rapport.ps: rapport-pp.tex biblio.bib
+	latex rapport-pp
+	bibtex rapport-pp
+	latex rapport-pp
+	latex rapport-pp
+	dvips rapport-pp.dvi -o $@
 
-%-pp.tex: pp.ml %.tex	 
+rapport-pp.tex: pp.ml rapport.tex	 
 	ocaml $^ > $@
 
 pp.ml: pp.mll
 	ocamllex pp.mll
 
+%.eps: %.png
+	pngtopnm $^
+	pnmtops %.pnm
+	ps2epsi %.ps
+	rm *.pnm
+	rm *.ps
+
 print: rapport.ps
 	lpr $^
+clean:
+	rm -f *.ml *-pp.tex  *.log *.dvi
