--- a/editor/rapport-ter/Makefile
+++ b/editor/rapport-ter/Makefile
@@ -1,6 +1,10 @@
 
 EPS= images/lentille1.eps images/lentille2.eps images/perpendiculaire.eps images/parallels.eps  
 
+all : rapport.ps soutenance.pdf
+
+soutenance.pdf: soutenance.tex
+	pdflatex soutenance.tex
 
 rapport.ps: rapport.tex biblio.bib $(EPS)
 	latex rapport
