--- a/configure.in
+++ b/configure.in
@@ -1,3 +1,20 @@
+##########################################################################
+#                                                                        #
+#  Ocamlgraph: a generic graph library for OCaml                         #
+#  Copyright (C) 2004-2007                                               #
+#  Sylvain Conchon, Jean-Christophe Filliatre and Julien Signoles        #
+#                                                                        #
+#  This software is free software; you can redistribute it and/or        #
+#  modify it under the terms of the GNU Library General Public           #
+#  License version 2, with the special exception on linking              #
+#  described in file LICENSE.                                            #
+#                                                                        #
+#  This software is distributed in the hope that it will be useful,      #
+#  but WITHOUT ANY WARRANTY; without even the implied warranty of        #
+#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.                  #
+#                                                                        #
+##########################################################################
+
 #
 # autoconf input for Objective Caml programs
 # Copyright (C) 2001 Jean-Christophe Filliâtre
