--- a/Makefile.in
+++ b/Makefile.in
@@ -286,8 +286,8 @@ export-doc: $(DOC_CMO)
 MISCFTP = $(HOME)/WWW/ftp/ocaml/misc
 DELAUNAY=delaunay.ml delaunay.mli
 export-delaunay:
-	cp -f $(DELAUNAY) $(MISCFTP)
-	caml2html -d $(MISCFTP) $(DELAUNAY)
+	cd src; cp -f $(DELAUNAY) $(MISCFTP)
+	cd src; caml2html -d $(MISCFTP) $(DELAUNAY)
 
 # generic rules
 ###############
